--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
 		"yiisoft/yii2-jui": "~2.0.0",
 		"yiisoft/yii2-swiftmailer": "~2.0.0",
 		"vlucas/phpdotenv": "1.0.*",
-		"codemix/yii2-streamlog": "0.0.1"
+		"codemix/yii2-streamlog": "0.0.1",
+		"symfony/dom-crawler": "^3.1",
+		"symfony/browser-kit": "^3.1",
+		"fabpot/goutte": "^3.1"
 	},
 	"require-dev": {
 		"yiisoft/yii2-debug": "~2.0.0",
