--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
 		"codemix/yii2-streamlog": "0.0.1",
 		"symfony/dom-crawler": "^3.1",
 		"symfony/browser-kit": "^3.1",
-		"fabpot/goutte": "^3.1"
+		"fabpot/goutte": "^3.1",
+		"krtv/yii2-jms-serializer": "^2.0",
+		"symfony/yaml": "^3.1"
 	},
 	"require-dev": {
 		"yiisoft/yii2-debug": "~2.0.0",
